chore: apply prettier

--- a/mock-www/html/dothraki/index.html
+++ b/mock-www/html/dothraki/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>freeCodeCamp.org | Learn to Code</title>
     <style>
-      @import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
+      @import url("https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap");
 
       html {
         background-color: #0a0a23;
@@ -14,7 +14,7 @@
       }
 
       body {
-        font-family: 'Roboto Mono', monospace;
+        font-family: "Roboto Mono", monospace;
         color: white;
         font-size: 20px;
         margin: 2em auto;
