refactor: docker setup and files
fix: use correct URLs

--- a/docker/test/dev/html/dothraki/index.html
+++ b/docker/test/dev/html/dothraki/index.html
@@ -60,6 +60,7 @@
       <h2>Idde tat freecodecamp's learning platform.</h2>
       <h3>Jini dothraki learn root page.</h3>
       <h3>Happy coding!</h3>
+      <p><a href="/">Click here</a> to go back to the main page.</p>
     </div>
   </body>
 </html>
