--- a/docker/test/dev/html/index.html
+++ b/docker/test/dev/html/index.html
@@ -60,6 +60,14 @@
       <h2>Welcome to freeCodeCamp's learning platform.</h2>
       <h3>This is a English learn root page.</h3>
       <h3>Happy coding!</h3>
+      <p>
+        <a href="/dothraki/">Click here</a> for <code>/dothraki</code> landing
+        page.
+      </p>
+      <p>
+        <a href="/italian/news">Click here</a> for
+        <code>/italian/news</code> landing page.
+      </p>
     </div>
   </body>
 </html>
